Agentforce/force-app/main/default/objects/Pipeline__c/Pipeline__c.object-meta.xml
<CustomObject>
    <label>Pipeline</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Pipeline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>