Agentforce/force-app/main/default/objects/Pipeline__c/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <label>Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>