Agentforce/force-app/main/default/objects/Pipeline__c/fields/Opportunity_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Service_Id__c</fullName>
    <label>Opportunity Service Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>