Agentforce/force-app/main/default/objects/Pipeline__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>60</length>
    <type>Text</type>
</CustomField>