Agentforce/force-app/main/default/objects/Pipeline__c/fields/Total_Growth__c.field-meta.xml
<CustomField>
    <fullName>Total_Growth__c</fullName>
    <label>Total Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>